--- a/Chapter_8.ipynb
+++ b/Chapter_8.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p_ttest = 0.018, and p_wilcoxon = 0.024, both of which are < 0.05, so no significant difference.\n"
+      "p_ttest = 0.018, and p_wilcoxon = 0.024, both of which are < 0.05, so there is a significant difference.\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -88,6 +88,14 @@
      "text": [
       "Data in data1 are distributed normally, p = 0.19204806032435315\n",
       "Data in data2 are distributed normally, p = 0.34678775457262334\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\rich\\miniconda3\\envs\\pydata-book\\lib\\site-packages\\scipy\\stats\\_stats_py.py:1736: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=15\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
      ]
     }
    ],
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,235 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>group</th>\n",
-       "      <th>weight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Control</td>\n",
-       "      <td>4.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Control</td>\n",
-       "      <td>5.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Control</td>\n",
-       "      <td>5.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Control</td>\n",
-       "      <td>6.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Control</td>\n",
-       "      <td>4.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Control</td>\n",
-       "      <td>4.61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Control</td>\n",
-       "      <td>5.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Control</td>\n",
-       "      <td>4.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Control</td>\n",
-       "      <td>5.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Control</td>\n",
-       "      <td>5.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>TreatmentA</td>\n",
-       "      <td>4.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>TreatmentA</td>\n",
-       "      <td>4.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>TreatmentA</td>\n",
-       "      <td>4.41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>TreatmentA</td>\n",
-       "      <td>3.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>TreatmentA</td>\n",
-       "      <td>5.87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>TreatmentA</td>\n",
-       "      <td>3.83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>TreatmentA</td>\n",
-       "      <td>6.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>TreatmentA</td>\n",
-       "      <td>4.89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>TreatmentA</td>\n",
-       "      <td>4.32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>TreatmentA</td>\n",
-       "      <td>4.69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>TreatmentB</td>\n",
-       "      <td>6.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>TreatmentB</td>\n",
-       "      <td>5.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>TreatmentB</td>\n",
-       "      <td>5.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>TreatmentB</td>\n",
-       "      <td>5.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>TreatmentB</td>\n",
-       "      <td>5.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>TreatmentB</td>\n",
-       "      <td>5.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>TreatmentB</td>\n",
-       "      <td>4.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>TreatmentB</td>\n",
-       "      <td>6.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>TreatmentB</td>\n",
-       "      <td>5.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>TreatmentB</td>\n",
-       "      <td>5.26</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         group  weight\n",
-       "0      Control    4.17\n",
-       "1      Control    5.58\n",
-       "2      Control    5.18\n",
-       "3      Control    6.11\n",
-       "4      Control    4.50\n",
-       "5      Control    4.61\n",
-       "6      Control    5.17\n",
-       "7      Control    4.53\n",
-       "8      Control    5.33\n",
-       "9      Control    5.14\n",
-       "10  TreatmentA    4.81\n",
-       "11  TreatmentA    4.17\n",
-       "12  TreatmentA    4.41\n",
-       "13  TreatmentA    3.59\n",
-       "14  TreatmentA    5.87\n",
-       "15  TreatmentA    3.83\n",
-       "16  TreatmentA    6.03\n",
-       "17  TreatmentA    4.89\n",
-       "18  TreatmentA    4.32\n",
-       "19  TreatmentA    4.69\n",
-       "20  TreatmentB    6.31\n",
-       "21  TreatmentB    5.12\n",
-       "22  TreatmentB    5.54\n",
-       "23  TreatmentB    5.50\n",
-       "24  TreatmentB    5.37\n",
-       "25  TreatmentB    5.29\n",
-       "26  TreatmentB    4.92\n",
-       "27  TreatmentB    6.15\n",
-       "28  TreatmentB    5.80\n",
-       "29  TreatmentB    5.26"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -411,8 +191,7 @@
      "text": [
       "            df    sum_sq   mean_sq         F   PR(>F)\n",
       "C(group)   2.0   3.76634  1.883170  4.846088  0.01591\n",
-      "Residual  27.0  10.49209  0.388596       NaN      NaN\n",
-      "One of the groups is different.\n"
+      "Residual  27.0  10.49209  0.388596       NaN      NaN\n"
      ]
     }
    ],
@@ -427,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +259,7 @@
        "<class 'statsmodels.iolib.table.SimpleTable'>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,6 +274,43 @@
     "# TreatmentA-TreatmentB pair is the only one with p-value < 0.05,\n",
     "# so we reject the null hypothesis and say Treatment A and Treatment B differ."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result from Kruskal-Wallis test: p = 0.018423755731471966\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kruskal–Wallis\n",
+    "\n",
+    "# Would a nonparametric comparison lead to a different result?\n",
+    "\n",
+    "group_a = df['weight'][df['group']=='TreatmentA']\n",
+    "group_b = df['weight'][df['group']=='TreatmentB']\n",
+    "group_c = df['weight'][df['group']=='Control']\n",
+    "\n",
+    "# do Kruskal-Wallis test\n",
+    "h, p = stats.kruskal(group_c, group_a, group_b)\n",
+    "print(f'Result from Kruskal-Wallis test: p = {p}')\n",
+    "\n",
+    "# p < 0.05, so we reject the null hypothesis that the median of all groups are equal.\n",
+    "# Note that rejecting the null hypothesis does not indicate which group(s) differ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
